# platform_game

./: AGENTS.md  Makefile  Pipfile  README.md  constants.py  main.py  main_menu.py  platformer.py  pyproject.toml  setup.py  test_platformer.py
game/: main.py  main_menu.py
game/catcher/: __init__.py
game/catcher/src/: catcher.py
game/common/: __init__.py
game/common/src/: __init__.py  player.py  powerup.py
game/cooperative/: __init__.py
game/cooperative/src/: cooperative.py
game/jumper/: __init__.py
game/jumper/src/: jumper.py
game/platformer/: __init__.py
game/platformer/src/: platformer.py
game/platformer/tests/: test_platformer.py
game/racer/: racer.py
game/utils/: constants.py
platformer/: platformer.py
racer/: racer.py
