[project]
name = "game"
version = "0.1.0"
description = "A game project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "setuptools>=65.5.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]



[tool.pytest.ini_options]
pythonpath = "."
addopts = "-ra -q"
testpaths = [
    "tests",
] 